[package]
name = "handlebars-cli-ext"
version = "0.0.0"
authors = ["Simon Bourne <simonbourne@gmail.com>"]
edition = "2021"
description="A simple Handlebars CLI interface with some extras"
homepage="https://github.com/simon-bourne/rust-handlebars-cli-ext"
repository="https://github.com/simon-bourne/rust-handlebars-cli-ext"
license = "MIT OR Apache-2.0"

categories = ["templating"]
keywords = ["handlebars", "template", "cli"]

[dependencies]
execute = "0.2.9"
handlebars = "4.2.1"
serde_json = "1.0.75"
